fixed routing, changed from HttpClient to NgxHttpClientModule

--- a/src/app/dash/dash.component.css
+++ b/src/app/dash/dash.component.css
@@ -3,3 +3,17 @@
     padding: 8px;
     min-height:70vh;
 }
+
+.alert-div{
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    margin: 8px;
+
+}
+
+.mx{
+    margin-left: 2px;
+    margin-right: 2px;
+}
