--- a/src/app/namespaces/namespaces.component.html
+++ b/src/app/namespaces/namespaces.component.html
@@ -1,24 +1,34 @@
-<div class="input-field col s6">
+<div class="input-field col s12">
   <input id="nspace" type="text" class="validate" />
   <label for="nspace">NameSpace Search</label>
 </div>
-<div class="valign-wrapper col s3">
+
   <a
     routerLink="/new"
-    class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4"
+    class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
     style="margin-top:1rem;margin-bottom: 1rem;"
   >
     <i class="material-icons">add</i></a
   >
-</div>
-<div class="valign-wrapper col s3">
+
+
   <a
-    class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4"
+    class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
     style="margin-top:1rem;margin-bottom: 1rem;"
   >
     <i class="material-icons">file_upload</i></a
   >
-</div>
+
+
+  <a
+    class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx tooltipped"
+    style="margin-top:1rem;margin-bottom: 1rem;"
+    data-position="bottom" 
+    data-tooltip="I am a tooltip"
+  >
+    <i class="material-icons">file_download</i></a
+  >
+
         
 <div class="col s12">
   <div class="progress" *ngIf="fetchingNameSpaces">
@@ -30,15 +40,15 @@
   class="table table-borderless"
   *ngIf="loadedNameSpaces.length >= 1 && !fetchingNameSpaces"
 >
-  <tr *ngFor="let namespace of loadedNameSpaces">
-    <td>
-      <button class="btn-flat" (click)="loadSingleNS(namespace)">
+  <tr *ngFor="let namespace of loadedNameSpaces" class="t-row">
+    <td (click)="loadSingleNS(namespace)" class="t-data">
+      <!--<button class="btn-flat" (click)="loadSingleNS(namespace)"> -->
         {{ namespace }}
-      </button>
+      <!-- </button> -->
     </td>
     <td>
       <button
-        class="waves-effect waves-teal btn-flat"
+        class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 btn-hidden"
         (click)="deleteNamespace(namespace)"
       >
         <i class="material-icons">delete</i>
