editor for value json objects

--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -5,44 +5,55 @@
       {{ namespace }}
 
       <a
-        class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx">
+        class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
+      >
         <i class="material-icons">file_download</i>
       </a>
       <a
         class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
-        (click)="showKeyForm();">
+        (click)="showKeyForm()"
+      >
         <i class="material-icons">add</i>
       </a>
-
     </p>
-    
 
     <div class="divider"></div>
-
-    <form 
-    *ngIf="showForm"
-    #NewKeyForm="ngForm"
-    (ngSubmit)="addNewKey(namespace, NewKeyForm.value)"
-    >
-        <div class="input-field col s8">
-           <input 
-           id="email" 
-           type="text" 
-           class="validate" 
-           required
-           ngModel
-           name = "key"
-           #key = "ngModel">
-           <label for="email">Email</label>
-        </div>
-        <div class="col s4">
-            <button class="waves-effect waves-light btn" style="margin-top: 1rem" [disabled]="!NewKeyForm.valid">add key</button>
-        </div>
-    </form>
 
     <div class="progress" *ngIf="deletingKey && !keyDeleted">
       <div class="indeterminate"></div>
     </div>
+
+    <div class="progress" *ngIf="addingKey">
+      <div class="indeterminate"></div>
+    </div>
+
+    <form
+      *ngIf="showForm"
+      #NewKeyForm="ngForm"
+      (ngSubmit)="addNewKey(namespace, NewKeyForm.value)"
+    >
+      <div class="input-field col s8">
+        <input
+          id="email"
+          type="text"
+          class="validate"
+          required
+          ngModel
+          name="key"
+          #key="ngModel"
+        />
+        <label for="email">Email</label>
+      </div>
+      <div class="col s4">
+        <button
+          class="waves-effect waves-light btn"
+          style="margin-top: 1rem"
+          [disabled]="!NewKeyForm.valid"
+        >
+          add key
+        </button>
+      </div>
+    </form>
 
     <table
       class="table table-borderless"
@@ -55,32 +66,31 @@
           </button>
         </td>
         <td>
-          <button class="waves-effect waves-teal btn-flat" (click)="deleteKey(namespace, key, loadedKeys.length)">
+          <button
+            class="waves-effect waves-teal btn-flat"
+            (click)="deleteKey(namespace, key, loadedKeys.length)"
+          >
             <i class="material-icons">delete</i>
           </button>
         </td>
       </tr>
     </table>
 
-    <div *ngIf="loadedKeys.length === 1 && !loadingKeys" class="alert-div #fafafa grey lighten-5">
-      <p class="center-align red-text">Deleting the only key in the namespace will delete the namespace as well</p>
+    <div
+      *ngIf="loadedKeys.length === 1 && !loadingKeys"
+      class="alert-div #fafafa grey lighten-5"
+    >
+      <p class="center-align red-text">
+        Deleting the only key in the namespace will delete the namespace as well
+      </p>
     </div>
 
     <div class="progress" *ngIf="loadingKeys">
       <div class="indeterminate"></div>
     </div>
-
   </div>
 
   <div class="col s8">
-    <p>
-      <span>Key : </span>
-      Value
-    </p>
-    <div class="divider"></div>
-    <div class="z-depth-2 value-editor #e0f2f1 teal lighten-5">
-        <router-outlet></router-outlet>
-
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
