--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+<div class="row">
+  <div class="col s4">
+    <p>
+      <span>Namespace : </span>
+    </p>
+
+    <div class="divider"></div>
+
+    <p>Select a namespace to start manipulating it.</p>
+
+  </div>
+
+  <div class="col s8">
+    <p>
+      <span>Key : </span>
+    </p>
+
+    <div class="divider"></div>
+  </div>
+</div>
