--- a/src/app/namespaces/namespaces.component.html
+++ b/src/app/namespaces/namespaces.component.html
@@ -1,5 +1,5 @@
 <div class="input-field col s12">
-  <input id="nspace" type="text" class="validate" />
+  <input id="nspace" type="text" class="validate" [(ngModel)]="namespace"/>
   <label for="nspace">NameSpace Search</label>
 </div>
 
@@ -40,7 +40,7 @@
   class="table table-borderless"
   *ngIf="loadedNameSpaces.length >= 1 && !fetchingNameSpaces"
 >
-  <tr *ngFor="let namespace of loadedNameSpaces | paginate: { itemsPerPage: 5, currentPage: p }" class="t-row">
+  <tr *ngFor="let namespace of loadedNameSpaces | filterBy: namespace | paginate: { id: 'ns', itemsPerPage: 5, currentPage: p }" class="t-row">
     <td (click)="loadSingleNS(namespace)" class="t-data">
       <!--<button class="btn-flat" (click)="loadSingleNS(namespace)"> -->
         {{ namespace }}
@@ -57,4 +57,4 @@
   </tr>
 </table>
 
-<pagination-controls (pageChange)="p = $event"></pagination-controls>
+<pagination-controls id='ns' (pageChange)="p = $event"></pagination-controls>
