--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -9,9 +9,9 @@
 
       <div class="divider"></div>
 
-      <div class="input-field">
+      <div class="input-field col s12">
         <input
-          id="namespace"
+          id="namespacef"
           type="text"
           class="validate"
           required
@@ -23,24 +23,30 @@
         <label for="namespacef">Your Namespace</label>
       </div>
 
-      <div class="input-field">
+      <div class="input-field col s12">
         <input
-          id="key"
+          id="keyform"
           type="text"
           class="validate"
           required
           ngModel
+          [disabled] = "generatingId"
           [(ngModel)]="idStr"
           name="key"
           #key="ngModel"
         />
         <label for="keyform">Your Key</label>
       </div>
+      <div class="col s12">
+        <div class="progress" *ngIf="generatingId">
+          <div class="indeterminate"></div>
+        </div>
+      </div>
 
       <div class="col s12">
-        <a class="waves-effect waves-light btn-small" (click)="generateRID()">
+        <button class="waves-effect waves-light btn-small" [disabled]="generatingId" (click)="generateRID()">
           generate key
-        </a>
+        </button>
       </div>
 
       <br /><br />
@@ -49,7 +55,7 @@
         <button
           type="submit"
           class="waves-effect waves-light btn-small"
-          [disabled]="!NameSpaceForm.valid"
+          [disabled]="!NameSpaceForm.valid && generatingId"
         >
           <i class="material-icons left">save</i>save
         </button>
