validate json + update value json

--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -61,7 +61,7 @@
       *ngIf="loadedKeys.length >= 1 && !loadingKeys"
     >
       <tr *ngFor="let key of loadedKeys | paginate: { itemsPerPage: 5, currentPage: pg }">
-        <td class="truncate" (click)="fetchValueObject(namespace, key)">
+        <td class="truncate" (click)="fetchValueObject(namespace, key)" style="cursor:pointer;">
           <!--<button class="btn-flat" (click)="fetchValueObject(namespace, key)">-->
             {{ key }}
           <!-- </button> -->
