--- a/src/app/namespaces/namespaces.component.html
+++ b/src/app/namespaces/namespaces.component.html
@@ -1,37 +1,34 @@
 <div class="input-field col s12">
-  <input id="nspace" type="text" class="validate" [(ngModel)]="namespace"/>
+  <input id="nspace" type="text" class="validate" [(ngModel)]="namespace" />
   <label for="nspace">NameSpace Search</label>
 </div>
 
-  <a
-    routerLink="/new"
-    class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
-    style="margin-top:1rem;margin-bottom: 1rem;"
-  >
-    <i class="material-icons">add</i></a
-  >
+<a
+  routerLink="/new"
+  class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
+  style="margin-top:1rem;margin-bottom: 1rem;"
+>
+  <i class="material-icons">add</i></a
+>
 
+<a
+  class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
+  style="margin-top:1rem;margin-bottom: 1rem;"
+>
+  <i class="material-icons">file_upload</i></a
+>
 
-  <a
-    class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
-    style="margin-top:1rem;margin-bottom: 1rem;"
-  >
-    <i class="material-icons">file_upload</i></a
-  >
+<a
+  class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx tooltipped"
+  style="margin-top:1rem;margin-bottom: 1rem;"
+  data-position="bottom"
+  data-tooltip="I am a tooltip"
+>
+  <i class="material-icons">file_download</i></a
+>
 
-
-  <a
-    class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx tooltipped"
-    style="margin-top:1rem;margin-bottom: 1rem;"
-    data-position="bottom" 
-    data-tooltip="I am a tooltip"
-  >
-    <i class="material-icons">file_download</i></a
-  >
-
-        
 <div class="col s12">
-  <div class="progress" *ngIf="fetchingNameSpaces">
+  <div class="progress" *ngIf="fetchingNameSpaces || deletingNspace">
     <div class="indeterminate"></div>
   </div>
 </div>
@@ -40,10 +37,25 @@
   class="table table-borderless"
   *ngIf="loadedNameSpaces.length >= 1 && !fetchingNameSpaces"
 >
-  <tr *ngFor="let namespace of loadedNameSpaces | filterBy: namespace | paginate: { id: 'ns', itemsPerPage: 5, currentPage: p }" class="t-row">
+  <tr
+    *ngFor="
+      let namespace of loadedNameSpaces
+        | filterBy: namespace
+        | paginate: { id: 'ns', itemsPerPage: 5, currentPage: p }
+    "
+    class="t-row"
+  >
+    <td style="padding: 0px">
+      <p style="padding: 0px">
+        <label style="padding: 0px">
+          <input type="checkbox" />
+          <span style="display: none"></span>
+        </label>
+      </p>
+    </td>
     <td (click)="loadSingleNS(namespace)" class="t-data">
       <!--<button class="btn-flat" (click)="loadSingleNS(namespace)"> -->
-        {{ namespace }}
+      {{ namespace }}
       <!-- </button> -->
     </td>
     <td>
@@ -57,4 +69,4 @@
   </tr>
 </table>
 
-<pagination-controls id='ns' (pageChange)="p = $event"></pagination-controls>
+<pagination-controls id="ns" (pageChange)="p = $event"></pagination-controls>
