json file import

--- a/src/app/namespaces/namespaces.component.html
+++ b/src/app/namespaces/namespaces.component.html
@@ -12,6 +12,7 @@
 >
 
 <a
+  routerLink="/import"
   class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
   style="margin-top:1rem;margin-bottom: 1rem;"
 >
@@ -44,6 +45,7 @@
         | paginate: { id: 'ns', itemsPerPage: 5, currentPage: p }
     "
     class="t-row"
+    id = "{{namespace}}"
   >
     <td style="padding: 0px">
       <p style="padding: 0px">
