--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -6,7 +6,7 @@
 
       <a
         class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
-        (click) = "jsonFileExpNS(namespace)"
+        (click)="jsonFileExpNS(namespace)"
       >
         <i class="material-icons">file_download</i>
       </a>
@@ -19,6 +19,12 @@
     </p>
 
     <div class="divider"></div>
+    <div *ngIf="generatingKeys">
+      Generating {{ namespace }} json file.<br/> {{keysLoadProgress}} of {{keysList.length}} keys loaded.
+      <div class="progress">
+        <div class="determinate" [style.width]="keysLoadPercent + '%'"></div>
+      </div>
+    </div>
 
     <div class="progress" *ngIf="deletingKey && !keyDeleted">
       <div class="indeterminate"></div>
@@ -60,10 +66,18 @@
       class="table table-borderless"
       *ngIf="loadedKeys.length >= 1 && !loadingKeys"
     >
-      <tr *ngFor="let key of loadedKeys | paginate: { itemsPerPage: 5, currentPage: pg }">
-        <td class="truncate" (click)="fetchValueObject(namespace, key)" style="cursor:pointer;">
+      <tr
+        *ngFor="
+          let key of loadedKeys | paginate: { itemsPerPage: 5, currentPage: pg }
+        "
+      >
+        <td
+          class="truncate"
+          (click)="fetchValueObject(namespace, key)"
+          style="cursor:pointer;"
+        >
           <!--<button class="btn-flat" (click)="fetchValueObject(namespace, key)">-->
-            {{ key }}
+          {{ key }}
           <!-- </button> -->
         </td>
         <td>
