added import summary

--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -82,7 +82,7 @@
         </td>
         <td>
           <button
-            class="waves-effect waves-teal btn-flat"
+            class="waves-effect waves-white btn-flat grey-text text-lighten-3"
             (click)="deleteKey(namespace, key, loadedKeys.length)"
           >
             <i class="material-icons">delete</i>
