--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,8 @@
     <app-namespaces></app-namespaces>
   </div>
 
-  <div class="col s10 outlet z-depth-3">
-      <router-outlet></router-outlet>
+  <div class="col s10 outlet">
+    <router-outlet></router-outlet>
   </div>
 </div>
 
@@ -30,5 +30,3 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
