--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -59,7 +59,7 @@
           name="key"
           #key="ngModel"
         />
-        <label for="email">Email</label>
+        <label for="email">Key</label>
       </div>
       <div class="col s4">
         <button
@@ -92,7 +92,7 @@
         </td>
         <td>
           <button
-            class="waves-effect waves-white btn-flat grey-text text-lighten-3"
+            class="waves-effect waves-white btn-flat grey-text text-lighten-3 del-btn"
             (click)="deleteKey(namespace, key, loadedKeys.length)"
           >
             <i class="material-icons">delete</i>
