--- a/src/app/namespaces/namespaces.component.html
+++ b/src/app/namespaces/namespaces.component.html
@@ -1,4 +1,4 @@
-<div class="input-field col s12">
+<div class="input-field col s12" style="margin: 0px;">
   <input id="nspace" type="text" class="validate" [(ngModel)]="namespace" />
   <label for="nspace">NameSpace Search</label>
 </div>
@@ -7,7 +7,6 @@
   <a
     routerLink="/new"
     class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
-    style="margin-top:1rem;margin-bottom: 1rem;"
     tooltip="New namespace"
     placement="top"
     show-delay="100"
@@ -18,7 +17,6 @@
   <a
     routerLink="/import"
     class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
-    style="margin-top:1rem;margin-bottom: 1rem;"
     tooltip="Import namespace(s)"
     placement="top"
     show-delay="100"
@@ -28,7 +26,6 @@
 
   <button
     class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx"
-    style="margin-top:1rem;margin-bottom: 1rem;"
     (click)="exportSelectedNS()"
     [disabled]="nameSpacesToExport.length == 0"
     tooltip="Export namespaces"
@@ -87,7 +84,7 @@
     </td>
     <td class="t-d">
       <button
-        class="waves-effect waves-white btn-flat grey-text text-lighten-3"
+        class="waves-effect waves-white btn-flat grey-text text-lighten-3 del-btn"
         style="padding:4px;"
         (click)="deleteNamespace(namespace)"
       >
