--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -59,9 +59,7 @@
         </button>
       </div>
 
-      <br /><br />
-
-      <div class="col s12">
+      <div class="col s12" style="margin-top: 2rem;">
         <button
           type="submit"
           class="waves-effect waves-light btn-small"
