add selected namespace & key highlight

--- a/src/app/dash/dash.component.css
+++ b/src/app/dash/dash.component.css
@@ -20,3 +20,10 @@
   color: #004d4d !important;
   cursor: pointer;
 }
+.active {
+  background-color: aliceblue;
+}
+
+a {
+  color: black !important;
+}
