--- a/src/app/namespaces/namespaces.component.css
+++ b/src/app/namespaces/namespaces.component.css
@@ -48,3 +48,11 @@
   color: #004d4d !important;
   cursor: pointer;
 }
+
+.active {
+  background-color: aliceblue;
+}
+
+a {
+  color: black !important;
+}
