feat: add ngx-dhis2-menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,9 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<nav class="#004d40 teal darken-4">
-  <div class="nav-wrapper px">
-    <a class="navbar-brand" routerLink="/">DataStore</a>
-  </div>
-</nav>
+<ngx-dhis2-menu></ngx-dhis2-menu>
 
-<div class="row px py">
+<div class="row px py" style="margin-top: 70px;">
   <div class="col s2">
     <app-namespaces></app-namespaces>
   </div>
