--- a/src/app/new/new.component.css
+++ b/src/app/new/new.component.css
@@ -5,3 +5,13 @@
   padding-bottom: 4px;
   margin: 8px;
 }
+
+/* label focus color */
+.input-field input[type="text"]:focus + label {
+  color: gray !important;
+}
+/* label underline focus color */
+.input-field input[type="text"]:focus {
+  border-bottom: 1px solid #276696 !important;
+  box-shadow: 0 1px 0 0 #276696 !important;
+}
