--- a/src/app/dash/dash.component.css
+++ b/src/app/dash/dash.component.css
@@ -17,7 +17,7 @@
   margin-right: 2px;
 }
 .del-btn:hover {
-  color: #004d4d !important;
+  color: #276696 !important;
   cursor: pointer;
 }
 .active {
@@ -26,4 +26,14 @@
 
 a {
   color: black !important;
+}
+
+/* label focus color */
+.input-field input[type="text"]:focus + label {
+  color: gray !important;
+}
+/* label underline focus color */
+.input-field input[type="text"]:focus {
+  border-bottom: 1px solid #276696 !important;
+  box-shadow: 0 1px 0 0 #276696 !important;
 }
