--- a/src/app/import/import.component.html
+++ b/src/app/import/import.component.html
@@ -9,7 +9,7 @@
   <div class="col s4">
     <form>
       <div class="file-field input-field">
-        <div class="btn btn-small">
+        <div class="btn btn-small #01579b light-blue darken-3">
           <span>File</span>
           <input
             type="file"
@@ -18,7 +18,7 @@
           />
         </div>
         <div class="file-path-wrapper">
-          <input class="file-path validate" type="text" />
+          <input class="file-path" type="text" />
         </div>
       </div>
     </form>
@@ -31,10 +31,13 @@
   <div>
     <p style="text-align: center;">Importing Values</p>
     <div
-      class="progress"
+      class="progress #e3f2fd blue lighten-5"
       style="width: 30rem;margin-left: auto;margin-right: auto;"
     >
-      <div class="determinate" [style.width]="importProgress + '%'"></div>
+      <div
+        class="determinate #01579b light-blue darken-3"
+        [style.width]="importProgress + '%'"
+      ></div>
     </div>
     <p style="text-align: center;">{{ importProgress }}%</p>
   </div>
@@ -65,7 +68,7 @@
 >
   <div class="row">
     <button
-      class="btn-floating btn-small waves-effect waves-light #004d40 teal darken-4 mx right"
+      class="btn-floating btn-small waves-effect waves-light #01579b light-blue darken-3"
       style="margin-right: 15px"
       (click)="closeSummary()"
       tooltip="Close Summary"
