--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -11,8 +11,8 @@
 
       <app-error *ngIf="errorExists" [errorObj]="errorObj"></app-error>
 
-      <div class="progress" *ngIf="creatingNspace">
-        <div class="indeterminate"></div>
+      <div class="progress #e3f2fd blue lighten-5" *ngIf="creatingNspace">
+        <div class="indeterminate #01579b light-blue darken-3"></div>
       </div>
 
       <div class="input-field col s12">
@@ -44,14 +44,14 @@
         <label for="keyform">Your Key</label>
       </div>
       <div class="col s12">
-        <div class="progress" *ngIf="generatingId">
-          <div class="indeterminate"></div>
+        <div class="progress #e3f2fd blue lighten-5" *ngIf="generatingId">
+          <div class="indeterminate #01579b light-blue darken-3"></div>
         </div>
       </div>
 
       <div class="col s12">
         <button
-          class="waves-effect waves-light btn-small"
+          class="waves-effect waves-light btn-small #01579b light-blue darken-3"
           [disabled]="generatingId"
           (click)="generateRID()"
         >
@@ -62,7 +62,7 @@
       <div class="col s12" style="margin-top: 2rem;">
         <button
           type="submit"
-          class="waves-effect waves-light btn-small"
+          class="waves-effect waves-light btn-small #01579b light-blue darken-3"
           [disabled]="!NameSpaceForm.valid"
         >
           <i class="material-icons left">save</i>save
@@ -90,8 +90,11 @@
         <i class="material-icons left">save</i>save
       </a>
     </form>
-    <div class="progress" *ngIf="!savedNsKey && savingNsKey">
-      <div class="indeterminate"></div>
+    <div
+      class="progress #e3f2fd blue lighten-5"
+      *ngIf="!savedNsKey && savingNsKey"
+    >
+      <div class="indeterminate #01579b light-blue darken-3"></div>
     </div>
   </div>
 </div>
